--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ header {visibility: hidden;}
 }
 */
 
-.st-c5.st-c6.st-c7.st-bb.st-an.st-ap.st-aq.st-ao.st-f6.st-f7.st-fj.st-b5.st-ew.st-j5.st-gk.st-gl {
+.st-cq.st-cr.st-cs.st-c4.st-at.st-av.st-aw.st-au.st-eq.st-er.st-hp.st-as.st-hq.st-hr.st-eu.st-ev {
     left: 90px;
 }
 
