--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,6 @@ header {visibility: hidden;}
 }
 */
 
-.st-cq.st-cr.st-cs.st-c4.st-at.st-av.st-aw.st-au.st-eq.st-er.st-hp.st-as.st-hq.st-hr.st-eu.st-ev {
+.st-ct.st-dl.st-dm.st-d4.st-at.st-av.st-aw.st-au.st-es.st-et.st-f7.st-as.st-f8.st-jt.st-jn.st-ge {
     left: 90px;
 }
-
