--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ div.block-container.st-emotion-cache-13ln4jf.ea3mdgi5 > div > div > div > div.st
     float: right;
 }
 
+
 .st-emotion-cache-vzv0di {
     max-width: 1300px;
     margin-left: auto;
@@ -157,4 +158,11 @@ header {visibility: hidden;}
     font-style: italic;
 }
 */
+
+
+
+[data-testid="stLogo"] {
+    scale: 1.6;
+    margin-left: 38px;
+}
 
